--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-body{
-    background-color: rgb(205, 213, 255)
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+
+}
+
+.hero-image {
+    background-image: url("donation1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 750px;
+    margin-top: -20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.hero-text {
+    text-align: center;
+    color: rgb(255, 255, 255);
+}
+
+.button {
+    text-decoration: none;
+    background-color: orangered;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
 }
