--- a/style.css
+++ b/style.css
@@ -43,25 +43,30 @@ body {
 
 .button {
     text-decoration: none;
-    background-color: rgb(175, 86, 53);
+    background-color: #FF5959;
     color: white;
     padding: 20px 30px;
     border-radius: 5px;
     font-size: 20px;
 }
 
+/*2nd Section */
+
 .pricing {
     display: flex;
     justify-content: center;
     padding: 100px;
+    position: relative;
+    bottom: 80px;
+
 }
 
 .price {
     padding: 40px;
     font-size: 35px;
     font-weight: 800;
-    color: rgba(85, 85, 88, 0.781);
-    background-color: rgba(160, 161, 157, 0.116);
+    color: rgba(121, 121, 124, 0.781);
+    background-color: rgba(209, 211, 205, 0.137);
     border-radius: 10px;
 
 }
@@ -72,7 +77,72 @@ body {
 
 .price-2 {
     margin-right: 35px;
-    border: 3px solid red;
+    border: 3px solid rgb(238, 33, 33);
     border-radius: 10px;
     color: red;
+}
+
+.text-1 {
+    text-align: center;
+}
+
+.text-1 h1 {
+    font-size: 50px;
+    margin-top: 150px;
+}
+
+.text-1 p {
+    font-size: 25px;
+    color: rgb(94, 91, 91);
+    margin-bottom: 30px;
+}
+
+input {
+    border: none;
+    border-bottom: 2px solid rgba(145, 142, 142, 0.637);
+    padding: 10px 400px;
+    font-size: 25px;
+    color: grey;
+    position: relative;
+    bottom: 100px;
+}
+
+.btn-2 {
+    position: relative;
+    bottom: 40px;
+}
+
+/*3rd section*/
+
+.price-plan {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.plan {
+    padding: 50px;
+    border-radius: 10px;
+
+}
+
+.common {
+    margin-right: 15px;
+}
+
+.price-plan p {
+    line-height: 30px;
+    color: gray;
+}
+
+.bg-1 {
+    background-color: #EDF5F6;
+}
+
+.bg-2 {
+    background-color: #FFEEEE;
+}
+
+.bg-3 {
+    background-color: #FFF4D6;
 }
