--- a/style.css
+++ b/style.css
@@ -146,3 +146,33 @@ input {
 .bg-3 {
     background-color: #FFF4D6;
 }
+
+/* 4th section */
+.flood {
+    display: flex;
+    justify-content: center;
+    padding: 150px 0px;
+}
+
+.img {
+    position: relative;
+    right: 50px;
+}
+
+.img img {
+    border-radius: 10px;
+}
+
+.text h1 {
+    font-size: 40px;
+}
+
+.text p {
+    font-size: 25px;
+    color: rgb(153, 161, 168);
+}
+
+.btn-3 {
+    position: relative;
+    top: 15px;
+}
