--- a/style.css
+++ b/style.css
@@ -204,4 +204,19 @@ body {
     width: 950px;
     height: 250px;
     margin: 0 auto;
+    margin-bottom: 120px;
+}
+
+/*Footer Section*/
+.footer {
+    text-align: center;
+    color: rgb(224, 219, 219);
+    background-color: black;
+    padding: 35px;
+}
+
+.footer h1 {
+    font-family: 'Lobster', cursive;
+    color: #FF5959;
+    font-size: 35px;
 }
