--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hero-image {
-    background-image: url("donation1.jpg");
+    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)), url("donation6.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
