--- a/style.css
+++ b/style.css
@@ -5,49 +5,114 @@ body {
 
 }
 
-.hero-image {
-    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)), url("donation6.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 800px;
-    margin-top: -20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+/* Hero Section CSS */
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.hero-text h1 {
-    font-size: 80px;
-    letter-spacing: 0.1px;
-    font-weight: 700;
-    line-height: 80px;
-    word-spacing: 0.1px;
+.header {
+    height: 70px;
+    width: auto;
+    background: #34495e;
+    padding: 0 20px;
+    color: #fff;
 }
 
-.hero-text p {
-    font-size: 25px;
-    margin: auto;
-    position: relative;
-    bottom: 40px;
-
-
+.logo {
+    line-height: 100px;
+    float: left;
+    text-transform: uppercase;
 }
 
-.hero-text {
-    text-align: center;
-    color: rgb(255, 255, 255);
-    padding-bottom: 100px;
+.menu {
+    float: right;
+    line-height: 100px;
 }
 
-.button {
+.menu a {
+    color: #fff;
+    text-transform: uppercase;
     text-decoration: none;
-    background-color: #FF5959;
-    color: white;
-    padding: 20px 30px;
-    border-radius: 5px;
-    font-size: 20px;
+    padding: 0 10px;
+}
+
+.show-menu-btn,
+.hide-menu-btn {
+    transition: 0.4s;
+    font-size: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.show-menu-btn {
+    float: right;
+}
+
+.show-menu-btn i {
+    line-height: 100px
+}
+
+.menu a:hover,
+.show-menu-btn:hover,
+.hide-menu-btn:hover {
+    color: #3498db;
+}
+
+
+#chk {
+    position: absolute;
+    left: 600px;
+}
+
+.content {
+    padding: 0 20px;
+}
+
+.content img {
+    width: 100%;
+    max-width: 700px;
+    margin: 20px 0;
+}
+
+.content p {
+    text-align: justify;
+}
+
+@media screen and (max-width: 800px) {
+
+    .show-menu-btn,
+    .hide-menu-btn {
+        display: block;
+    }
+
+    .menu {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #333;
+        right: -100%;
+        top: 0;
+        text-align: center;
+        padding: 80px 0;
+        line-height: normal;
+        transition: 0.7s
+    }
+
+    .menu a {
+        display: block;
+        padding: 20px;
+    }
+
+    .hide-menu-btn {
+        position: absolute;
+        top: 40px;
+        right: 40px;
+    }
+
+    #chk:checked~.menu {
+        right: 0;
+    }
 }
 
 /*2nd Section */
